--- a/app/src/main/res/layout/activity_kotlin.xml
+++ b/app/src/main/res/layout/activity_kotlin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,7 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.commit451.viewtiful.sample.MainActivity">
 
     <TextView
@@ -17,9 +16,4 @@
         android:layout_height="wrap_content"
         android:text="Hello World!"/>
 
-    <Button
-        android:id="@+id/kotlin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Kotlin"/>
-</LinearLayout>
+</RelativeLayout>
